[gd_scene load_steps=7 format=3 uid="uid://n3ghqepdhls5"]

[ext_resource type="Script" path="res://src/main/scene/role/standard_weapons/weapon_23/rock_area.gd" id="1_q6lp3"]
[ext_resource type="Texture2D" uid="uid://2hwjx3hgto7k" path="res://assets/MyVFX/MiscVFX/RockCircle/RockCircle-Sheet.png" id="1_w4fps"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qhe03"]
radius = 66.0076

[sub_resource type="Animation" id="Animation_5qiqr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lqjgd"]
resource_name = "init"
length = 1.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tixyw"]
_data = {
"RESET": SubResource("Animation_5qiqr"),
"init": SubResource("Animation_lqjgd")
}

[node name="RockArea" type="Area2D"]
collision_layer = 0
collision_mask = 514
script = ExtResource("1_q6lp3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qhe03")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.6, 1.6)
texture = ExtResource("1_w4fps")
hframes = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tixyw")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
